--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -413,7 +413,7 @@ article, aside, details, figcaption, figure, footer, header, main, menu, nav, se
 .content-section{
     padding: 58px 0 70px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover !important;
 }
 .top-section{
  background-image: url("../../img/bg-top.jpg");
@@ -490,6 +490,7 @@ article, aside, details, figcaption, figure, footer, header, main, menu, nav, se
     position: absolute;
     top: 0;
     cursor: pointer;
+    width: 50px !important;
 }
 .poster-main .poster-prev-btn{
     left: 0;
@@ -509,16 +510,15 @@ article, aside, details, figcaption, figure, footer, header, main, menu, nav, se
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 90px;
+    margin-bottom: 84px;
 }
 .poster-list{
-    position: absolute;
+    position: relative;
     top: 0;
 }
 .slbottomblock{
     background-color: #0072b8;
     position: absolute;
-    bottom: 4px;
     left: 0;
     right: 2px;
     border-bottom-right-radius: 5px;
@@ -691,7 +691,7 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
 .form-control option{
     background: #0478bf;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 16px;
 }
 .form-control:focus{
     background: #0478bf;
@@ -874,4 +874,250 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
 }
 .container-showssearch:last-child{
     margin-right: 0;
+}
+.blue-section{
+    background: url("../../img/bg-blue.jpg") no-repeat;
+}
+.white-text{
+    color: #ffffff;
+}
+.poster-item .playicon{
+   top: -200%;
+}
+.padding-top-30{
+    padding-top: 30px;
+}
+.video-container{
+    position: relative;
+    max-width: 1140px;
+}
+.video-container img{
+    max-width: 1140px;
+}
+.header-video-play{
+    position: absolute;
+    display: flex;
+    align-self: center;
+    justify-content: space-between;
+    left: 0;
+    right: 0;
+    top: 0;
+    padding: 20px;
+}
+.border-color-user{
+    width: 54px;
+    height: 54px;
+    border-radius: 100%;
+    background: linear-gradient(to right, rgba(107,255,94,1) 0%, rgba(131,247,237,1) 52%, rgba(116,242,149,1) 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+}
+.user-img{
+    width: 44px;
+    height: 44px;
+    border-radius: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.user-title{
+    color: #1c7ed1;
+    font-size: 20px;
+    font-weight: 600;
+    max-width: 140px;
+}
+.user-avatar-container{
+    display: flex;
+    align-items: center;
+}
+.social-list{
+    display: flex;
+    align-items: center;
+}
+.social-item{
+    margin-right: 10px;
+}
+.social-item:last-child{
+    margin-right: 0;
+}
+.social-link{
+    width: 46px;
+    height: 46px;
+    border-radius: 100%;
+    border: 4px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.social-link i{
+    color: #ffffff;
+    font-size: 20px;
+    margin: 0 auto;
+}
+.chat-container{
+    min-width: 250px;
+    max-width: 400px;
+    width: 100%;
+    background: rgba(53,53,53, 0.7);
+    position: absolute;
+    top: 95px;
+    left: 0;
+}
+.typing-text{
+    font-size: 14px;
+    color: #ffffff;
+}
+.header-chat{
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(28,126,209, 0.5);
+}
+.btn-chat-container button{
+    width: 30px;
+    height: 30px;
+    background: rgba(1,33,97, 0.5);
+    border-radius: 3px;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+.btn-chat-container button:hover{
+    transition: .3s;
+    background: rgba(38,54,80,0.5);
+}
+.body-chat{
+    min-height: 250px;
+    max-height: 350px;
+    padding: 15px;
+    overflow-y: auto;
+}
+.user-icon-container{
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    margin-bottom: 5px;
+}
+.user-icon-container img{
+    max-width: 30px;
+}
+.type-typing{
+    color: #ffffff;
+    font-size: 11px;
+}
+.icon-typing-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.first-user{
+    display: flex;
+    align-self: flex-start;
+}
+.message-text{
+    background: rgba(255,255,255, 0.7);
+    max-width: 230px;
+    padding: 10px;
+    border-radius: 4px;
+    position: relative;
+    margin-left: 20px;
+}
+.message-text p{
+    max-height: 150px;
+}
+.message-text:before{
+    content: '';
+    position: absolute;
+    left: -15px; top: 10px;
+    border: 8px solid transparent;
+    border-right: 8px solid rgba(255,255,255, 0.7);
+}
+.user-message-container{
+    margin-bottom: 20px;
+}
+.next-user{
+    display: flex;
+    align-self: flex-end;
+    flex-direction: row-reverse;
+}
+.next-user .message-text{
+    margin-right: 20px;
+    transform: scale(-1,1);
+    background: rgba(35,185, 241, 0.7);
+}
+.next-user .message-text p{
+    transform: scale(-1,1);
+}
+.next-user .message-text:before{
+    content: '';
+    position: absolute;
+    left: -16px;
+    top: 10px;
+    border: 8px solid transparent;
+    border-right: 8px solid rgba(35,185, 241, 0.7);
+}
+.typing-input{
+    border: none;
+    background: transparent;
+    padding: 20px;
+    width: 80%;
+    outline: none;
+    color: #ffffff;
+}
+.block-typing-message{
+    border-top: 1px solid rgba(28,126,209, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px;
+}
+.block-typing-message{
+
+}
+.typing-btn{
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background-color: #666e7a;
+    background-image: url("../../img/send.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+}
+.typing-btn:hover{
+    transition: .3s;
+    opacity: 0.7;
+}
+.smille-btn{
+    border: none;
+    background: transparent;
+    background-image: url("../../img/emocii.png");
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    opacity: 0.5;
+    margin-right: 10px;
+    cursor: pointer;
+}
+.btn-typing{
+    display: flex;
+    align-items: center;
+}
+.attach-btn{
+    border: none;
+    background: transparent;
+    background-image: url("../../img/attach.png");
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 25px;
+    border-radius: 100%;
+    opacity: 0.5;
+    margin-right: 10px;
+    cursor: pointer;
 }
