--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -504,6 +504,7 @@ article, aside, details, figcaption, figure, footer, header, main, menu, nav, se
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: calc(100vh - 60px);
 }
 .poster-width{
     min-width: 100%;
@@ -889,10 +890,13 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
 }
 .video-container{
     position: relative;
-    max-width: 1700px;
+    height: calc(100vh - 58px);
 }
-.video-container img{
-    max-width: 1700px;
+.big-video{
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    max-height: calc(100vh - 60px);
 }
 .header-video-play{
     position: absolute;
@@ -903,6 +907,10 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
     right: 0;
     top: 0;
     padding: 20px;
+}
+.container-video-play{
+    width: 90%;
+    margin-top: 30px;
 }
 .border-color-user{
     width: 54px;
@@ -922,6 +930,10 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.user-img img{
+    max-width: 40px !important;
+    width: 100%;
 }
 .user-title{
     color: #1c7ed1;
@@ -959,40 +971,40 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
 }
 .chat-container{
     min-width: 250px;
-    max-width: 400px;
     width: 100%;
     background: rgba(53,53,53, 0.7);
     position: absolute;
-    top: 95px;
+    bottom: 0;
     left: 0;
+    right: 0;
 }
 .typing-text{
     font-size: 14px;
     color: #ffffff;
 }
 .header-chat{
-    padding: 15px;
+    padding-left: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid rgba(28,126,209, 0.5);
 }
 .btn-chat-container button{
-    width: 30px;
-    height: 30px;
+    width: 48px;
+    height: 48px;
     background: rgba(1,33,97, 0.5);
     border-radius: 3px;
     border: none;
     color: #ffffff;
     cursor: pointer;
+    font-size: 18px;
 }
 .btn-chat-container button:hover{
     transition: .3s;
     background: rgba(38,54,80,0.5);
 }
 .body-chat{
-    min-height: 250px;
-    max-height: 350px;
+    max-height: 150px;
     padding: 15px;
     overflow-y: auto;
 }
@@ -1037,7 +1049,7 @@ select.form-control, textarea.form-control, input.form-control[type="text"], inp
     border-right: 8px solid rgba(255,255,255, 0.7);
 }
 .user-message-container{
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 .next-user{
     display: flex;
