--- a/styles/css/response.css
+++ b/styles/css/response.css
@@ -378,10 +378,8 @@
         width: 35px;
         height: 35px;
     }
-}
-@media only screen and (max-width: 375px) and (min-width: 360px) {
     .response-carousel,
     .poster-item-response{
-        max-width: 360px  !important;
+        max-width: 100%  !important;
     }
 }
