--- a/styles/css/response.css
+++ b/styles/css/response.css
@@ -416,6 +416,9 @@
         width: 38px;
         height: 38px;
     }
+    #search .input-lg{
+        display: none;
+    }
 }
 @media only screen and (max-width: 375px) and (min-width: 360px) {
     .add-span{
